# figaro

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.worker-desktop  Dockerfile.worker-desktop-legacy  LICENSE.md  README.md  SECURITY.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  nats.conf
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: install.yml
docker/: Dockerfile.guacd  Dockerfile.postgres  Dockerfile.supervisor  Dockerfile.test-target  Dockerfile.worker-desktop  Dockerfile.worker-desktop-legacy  container-desktop-install.sh  docker-compose.dev.yml  docker-compose.prod-local.yml  docker-compose.yml  init.sql  nats.conf
figaro/: Dockerfile  alembic.ini  package-lock.json  pyproject.toml
figaro-gateway/: Dockerfile  pyproject.toml
figaro-gateway/src/figaro_gateway/: __init__.py  config.py  stt.py
figaro-gateway/src/figaro_gateway/channels/telegram/: bot.py  channel.py
figaro-gateway/src/figaro_gateway/core/: channel.py  registry.py  router.py
figaro-gateway/tests/: test_channel_registry.py  test_config.py  test_router.py  test_stt.py  test_telegram_bot.py  test_telegram_channel.py
figaro-nats/: pyproject.toml
figaro-nats/src/figaro_nats/: __init__.py  client.py  jaeger.py  streams.py  subjects.py  trace_chain.py  tracing.py
figaro-nats/tests/: test_client.py  test_subjects.py  test_trace_chain.py
figaro-supervisor/: Dockerfile  pyproject.toml
figaro-supervisor/src/figaro_supervisor/hooks/: post_tool_use.py  stop.py
figaro-supervisor/src/figaro_supervisor/supervisor/: client.py  help_request.py  processor.py  tools.py
figaro-supervisor/tests/: test_client.py  test_help_request.py  test_hooks.py  test_supervisor_main.py  test_tools.py
figaro-ui/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
figaro-ui/src/: index.css  main.tsx  tracing.ts  vite-env.d.ts
figaro-ui/tests/: setup.ts
figaro-worker/: eslint.config.js  package.json
figaro-worker-legacy/: pyproject.toml
figaro-worker-legacy/skills/cloudflare-bypass/: SKILL.md
figaro-worker-legacy/src/figaro_worker/: __init__.py
figaro-worker-legacy/src/figaro_worker/worker/: __init__.py  client.py  prompt_formatter.py
figaro-worker-legacy/tests/: __init__.py  conftest.py  test_executor.py  test_prompt_formatter.py  test_tools.py
figaro-worker/src/: config.ts  index.ts  types.ts
figaro-worker/tests/: config.test.ts  executor.test.ts  help-request.test.ts  loop-detection.test.ts  nats-client.test.ts  prompt-formatter.test.ts  python-session.test.ts  python-tools.test.ts  supervisor-executor.test.ts  supervisor-prompt-formatter.test.ts  supervisor-tools.test.ts  tools.test.ts
figaro/src/figaro/: __init__.py  app.py  config.py  dependencies.py  tracing.py  vnc_proxy.py
figaro/src/figaro/db/: __init__.py  engine.py  migrate.py  models.py  types.py
figaro/src/figaro/db/migrations/: env.py
figaro/src/figaro/db/migrations/versions/: 20260120_022651_initial_schema.py  20260225_add_self_learning_to_scheduled_tasks.py  20260226_add_self_healing_to_scheduled_tasks.py  20260226_add_self_learning_limits.py  20260227_add_desktop_workers_table.py  20260301_add_run_at_to_scheduled_tasks.py  20260301_add_vnc_username_to_settings.py  20260301_encrypt_vnc_passwords.py  20260305_add_cancelled_task_status.py  20260310_add_memories_table.py
figaro/src/figaro/db/repositories/: __init__.py  desktop_workers.py  help_requests.py  memories.py  scheduled.py  settings.py  tasks.py  workers.py
figaro/src/figaro/models/: __init__.py  api.py  messages.py  scheduled_task.py
figaro/src/figaro/routes/: __init__.py  config.py  guacamole.py  static.py  websocket.py
figaro/src/figaro/services/: __init__.py  embedding.py  help_request.py  nats_service.py  registry.py  scheduler.py  ssh_client.py  task_manager.py  telnet_client.py  vnc_client.py  vnc_pool.py
figaro/src/figaro/services/nats/: __init__.py  api_desktop_workers.py  api_help.py  api_memories.py  api_remote.py  api_scheduled.py  api_tasks.py  background.py  desktop_init.py  event_handlers.py  publishing.py  queue.py  service.py  subscriptions.py
figaro/src/figaro/services/vnc_client/: __init__.py  adapter.py  keys.py  operations.py
figaro/src/figaro/vnc_proxy/: __init__.py  auth.py  backends.py  proxy.py
figaro/tests/: __init__.py  conftest.py  test_api_help_requests.py  test_api_memories.py  test_api_scheduled.py  test_api_supervisor.py  test_api_tasks.py  test_api_vnc.py  test_api_workers.py  test_db_help_requests.py  test_db_scheduled.py  test_db_tasks.py  test_db_workers.py  test_desktop_worker_persistence.py  test_desktop_worker_repository.py  test_gateway_integration.py  test_guacamole.py  test_help_request.py  test_notify_on_complete.py  test_registration.py  test_registry.py  test_scheduler.py  test_self_healing.py  test_self_learning.py  test_ssh_client.py  test_stop_task.py  test_task_manager.py  test_telnet_client.py  test_trace_live.py  test_vnc_client.py  test_vnc_pool.py  test_vnc_proxy.py  test_websocket_handler.py
figaro/tests/snapshots/: test_failed_task_self_healing_span_chain.json  test_gateway_task_span_chain.json  test_supervisor_delegation_span_chain.json
patchright-cli/: CLAUDE.md  DATADOME.md  Dockerfile  README.md  pyproject.toml
patchright-cli/src/patchright_cli/: __init__.py  __main__.py  captcha.py  cli.py  client.py  config.py  server.py  session.py  snapshot.py
patchright-cli/src/patchright_cli/skills/patchright-cli/references/: request-mocking.md  running-code.md  session-management.md  storage-state.md  test-generation.md  tracing.md  video-recording.md
patchright-cli/tests/: conftest.py  test_captcha.py  test_cli.py  test_client.py  test_config.py  test_server.py  test_session.py  test_snapshot.py
patchright-cli/tests/integration/: conftest.py  test_browser_launch.py  test_daemon_lifecycle.py  test_network_filtering.py  test_page_events.py  test_snapshot_real.py  test_socket_server.py  test_state_load.py  test_transcribe_audio.py
(+121 files in other folders)
