[project]
name = "figaro-gateway"
version = "0.1.0"
description = "Channel-agnostic messaging gateway for Figaro"
requires-python = ">=3.12"
dependencies = [
    "figaro-nats",
    "python-telegram-bot>=21.10",
    "pydantic-settings>=2.7.0",
    "telegramify-markdown>=1.0.0rc1",
]

[tool.uv.sources]
figaro-nats = {path = "../figaro-nats", editable = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/figaro_gateway"]

[project.scripts]
figaro-gateway = "figaro_gateway:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=figaro_gateway",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
    "-x",
]

[tool.coverage.run]
source = ["figaro_gateway"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
