[project]
name = "figaro-nats"
version = "0.1.0"
description = "Shared NATS messaging library for Figaro"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.9.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/figaro_nats"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
