[project]
name = "figaro-nats"
version = "0.1.0"
description = "Shared NATS messaging library for Figaro"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.9.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/figaro_nats"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=figaro_nats",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
    "-x",
]

[tool.coverage.run]
source = ["figaro_nats"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ty.src]
exclude = ["tests/"]

[tool.ruff.lint]
extend-select = ["ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/figaro_nats/tracing.py" = ["ANN401"]
"src/figaro_nats/trace_chain.py" = ["ANN401"]
