[project]
name = "figaro-worker"
version = "0.1.0"
description = "Figaro worker agent for browser automation tasks"
readme = "README.md"
authors = [
    { name = "byt3bl33d3r", email = "byt3bl33d3r@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "figaro-nats",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
figaro-worker = "figaro_worker:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.uv.sources]
figaro-nats = {path = "../figaro-nats", editable = true}

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
