[project]
name = "figaro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "byt3bl33d3r", email = "byt3bl33d3r@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "figaro-nats",
    "alembic>=1.14.0",
    "asyncvnc>=1.3.0",
    "Pillow>=11.0.0",
]

[tool.uv.sources]
figaro-nats = {path = "../figaro-nats", editable = true}

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[project.scripts]
figaro = "figaro:main"
figaro-migrate = "figaro.db.migrate:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=figaro",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
    "-x",
]

[tool.coverage.run]
source = ["figaro"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
